--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ license = "MIT OR Apache-2.0"
 full = []
 
 [dependencies]
-serde = {version = "*", features = ["derive"]}
-serde_json = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 base64 = "0.22.0"
 rust-crypto = "0.2.36"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"]}
